[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/key_and_part_randomizer.gd" type="Script" id=1]

[node name="key_and_part_randomizer" type="Spatial"]
script = ExtResource( 1 )

[node name="part_spawns" type="Spatial" parent="."]

[node name="key_red" type="Spatial" parent="."]

[node name="key_blue" type="Spatial" parent="."]

[node name="key_green" type="Spatial" parent="."]

[node name="key_yellow" type="Spatial" parent="."]

[node name="key_purple" type="Spatial" parent="."]
